Cleaned code. Added more accurate input description for user inside index.html

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <form method="POST" action="/history">
-    steam_id : <input type="text" name="steam_id">
+    Please enter your steam_32 id: <input type="text" name="steam_id">
     <input type="submit">
 </form>
 </body>
