--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -2,15 +2,15 @@
 <head><title>Match history</title></head>
 <body>
 {% for match in match_list %}
-<li>Match id: {{ match.match_id }}</li>
-<li>Match duration: {{match.duration}}</li>
-<li>Radiant win: {{match.radiant_win}}</li>
-<li>Match game mode: {{match.game_mode}}</li>
-<li>Hero: {{match.hero_id}}</li>
-<li>Kills: {{match.kills}}</li>
-<li>Deaths: {{match.deaths}}</li>
-<li>Assists: {{match.assists}}</li>
-<li>Party size: {{match.party_size}}</li>
+<li><a href="http://127.0.0.1:5000/match-details/{{ match.match_id }}">Match id: {{ match.match_id }}</a></li>
+<li>Match duration: {{ match.duration }}</li>
+<li>Radiant win: {{ match.radiant_win }}</li>
+<li>Match game mode: {{ match.game_mode }}</li>
+<li>Hero: {{ match.hero_id }}</li>
+<li>Kills: {{ match.kills }}</li>
+<li>Deaths: {{ match.deaths }}</li>
+<li>Assists: {{ match.assists }}</li>
+<li>Party size: {{ match.party_size }}</li>
 </br>
 {% endfor %}
 </body>
